# hello_world

./: README.md  README_EN.md  cookiecutter.json  get_subdirs.py  setup.py
enigma/: __init__.py  enigma.py  main.py
hello_world/: __init__.py  enigma.py  main.py  my_lib.py
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{cookiecutter.github_repository}}/: README.md  README_DEV.md  README_DEV_EN.md  README_DEV_PT.md  README_EN.md  environment.yml  pyproject.toml  setup.py
{{cookiecutter.github_repository}}/src/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.github_repository}}/{{cookiecutter.project_slug}}/: __init__.py  main.py
{{cookiecutter.module_name}}/: LICENSE  README.md  setup.py
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: main.py
